--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -98,9 +98,9 @@
           <div data-sr="enter left" class="row mb30">
             <ul class="nav nav-pills col-xs-12 text-center">
               <li class="filter" data-filter="all">All</li>
-              <li class="filter" data-filter="print">Print</li>
-              <li class="filter" data-filter="web">Web</li>
-              <li class="filter" data-filter="illustration">Illustration</li>
+              <li class="filter" data-filter="print">Networking?</li>
+              <li class="filter" data-filter="web">Purely Social?</li>
+              <li class="filter" data-filter="illustration">Singles Mixer</li>
             </ul>
           </div>
 
@@ -119,7 +119,7 @@
               
                   <div class="portfolio-text background-white">
                       <h3 class="portfolio-title"><a href="single-project.html"><%= theme.name %></a></h3>
-                      <div class="project-category">Illustration</div>
+                      <div class="project-category">Networking</div>
                   </div>
                 </div>
               </li><!-- /list item -->
