move twitter widget to about us page

--- a/app/views/welcome/mission.html.erb
+++ b/app/views/welcome/mission.html.erb
@@ -6,3 +6,19 @@
 
 <img src="http://www.assistantmagazine.com/wp-content/uploads/2015/06/26The-Shining.jpg" width="550" height="415" alt="shining">
 
+
+
+<div id="container">
+  <a class="twitter-timeline" height="300px" href="https://twitter.com/smallTalkToMe" data-widget-id="694906938132406272">Tweets by @smallTalkToMe</a>
+  <script>
+    !function(d,s,id){
+      var js,fjs = d.getElementsByTagName(s)[0],
+      p=/^http:/.test(d.location)?'http':'https';
+      if(!d.getElementById(id)){js=d.createElement(s);
+        js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js,fjs);
+      }
+    }
+    (document,"script","twitter-wjs");
+  </script>
+</div>
